Fixing preloader mobile issues. Making client changes. changing logo to blue on mobile.

--- a/src/styles/fonts.less
+++ b/src/styles/fonts.less
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
 @font-primary: 'Compacta-BT', Helvetica, Arial, sans-serif;
 @font-secondary: 'Proxima-Nova', Helvetica, Arial, sans-serif;
-@font-tertiary: 'Yanone Kaffeesatz', sans-serif;
+@font-tertiary: 'Roboto Condensed', sans-serif;
 
 @compactaBtPath: 'fonts/compacta-bt/Compacta-BT-';
 
