--- a/src/styles/preloader.less
+++ b/src/styles/preloader.less
@@ -10,16 +10,12 @@
         #backgroundimage {
             animation: underlineplane (@duration * 9) @easing;
         }
-       #preloaderLine {
+        #preloaderLine {
             animation:  underline (@duration * 6) (@duration * 0.5) @easing,
-                        pulsate (@duration * 3) (@duration * 6.5) linear infinite;
-        }
-        .preloader-loading-circle {
-            // animation: rotate-loading (@duration * 2) linear infinite normal;
-            // opacity: 1;
+            pulsate (@duration * 3) (@duration * 6.5) linear infinite;
         }
         .preloader-loading-text {
-            // animation: loading-text-opacity (@duration * 3) linear infinite;
+            opacity: 1;
         }
     }
 }
@@ -34,14 +30,14 @@
 }
 
 #preloader-container {
-    width: 100%;
+    position: fixed;
+    width: ~'calc(100vw + 120px)';
+    left: -60px;
     height: 100%;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: center;
-    justify-content: center
+    .flex-display();
+    .align-items(center);
+    .flex-direction(column);
+    .justify-content(center);
 }
 
 .preloader-tt {
@@ -101,15 +97,12 @@
 }
 
 #preloader-content, #preloader-content-2 {
-    position: fixed;
     .flex-display();
     .flex-direction(column);
     .justify-content(center);
     .align-items(center);
-    bottom: ~'calc(50vh)';
-    left: 50vw;
-    width: 100vw;
-    margin-left: -50vw;
+    width: 100%;
+    margin-bottom: 24px;
     text-align: center;
 }
 
@@ -148,34 +141,44 @@
 }
 
 #loader3 {
-  #backgroundimage {
-    position: fixed;
-    top: ~'calc(50vh + 0px)';
-    left: -60px;
     height: 60px;
-    font-size: 60px;
-    color: darken(@color-blue-light, 10%);
-    z-index: 10000;
-    opacity: 0;
-}
+    width: 100%;
+    .flex-display();
+    .align-items(center);
+    .justify-content(flex-start);
 
- #preloaderLine {
-      content: '';
-      position: fixed;
-      opacity: 1; 
-      left: -60px;   
-      top: ~'calc(50vh + 30px)';
-      width: ~'calc(100vw + 60px)';
-      .transform(scaleX(0));
-      height: 1px;
-      background-color: #18304D;
-      transform-origin: left center;
-  }
+    > div {
+        position: fixed;
+        left: 0;
+        width: 100%;
+        height: 60px;
+
+        #backgroundimage {
+            will-change: transform;
+            font-size: 60px;
+            color: darken(@color-blue-light, 10%);
+            z-index: 10000;
+            .transform(translateX(calc(-100vw - 60px)));
+            opacity: 0;
+        }
+
+        #preloaderLine {
+            position: absolute;
+            will-change: transform;
+            opacity: 1; 
+            top: 30px;
+            width: 100%;
+            .transform(scaleX(0));
+            height: 1px;
+            background-color: #18304D;
+            transform-origin: left center;
+        }
+    }
 }
 
 @keyframes pulsate {
     @red: #E83825;
-     0% {
+    0% {
         background-color: @red; 
         .transform(scaleX(1));
         opacity: 1;
@@ -220,33 +223,21 @@
 }
 
 #preloader-loading {
-    position: fixed;
     .flex-display();
     .align-items(center);
     .flex-direction(column);
-    top: ~'calc(50vh + 80px)';
-    width: 50%;
-    left: ~'calc(50% - 25%)';
+    width: 100%;
+    margin-top: 24px;
 
     .preloader-loading-text {
         font-family: @font-primary;
-        margin-bottom: 12px;
         text-transform: uppercase;
         color: darken(@color-blue-light, 10%);
         font-size: 40px;
         min-height: 40px;
+        opacity: 0;
         font-weight: 300;
         letter-spacing: 0.15em;
-    }
-
-    .preloader-loading-circle {
-        width: 24px;
-        height: 24px;
-        border-radius: 50%;
-        border: 1px solid transparent;
-        border-color: transparent darken(@color-blue-light, 10%) transparent darken(@color-blue-light, 10%);
-        transform-origin: center;
-        opacity: 0;
     }
 
     @keyframes rotate-loading {
